--- a/ui/src/app/shared/dialogs/edit-appointment-form-dialog/edit-appointment-form-dialog.component.html
+++ b/ui/src/app/shared/dialogs/edit-appointment-form-dialog/edit-appointment-form-dialog.component.html
@@ -28,7 +28,7 @@
     <div class="d-flex justify-content-end m-4">
         <button mat-stroked-button (click)="onClose($event)">Close</button>
         <button mat-flat-button color="primary" class="ml-2" (click)="onUpdate($event)">
-            Update
+            Save
         </button>
     </div>
 </div>
