Modified onBack method

--- a/ui/src/app/shared/components/shared-patient-consultation/shared-patient-consultation.component.html
+++ b/ui/src/app/shared/components/shared-patient-consultation/shared-patient-consultation.component.html
@@ -47,7 +47,7 @@
             <button
               class="float-left ml-2"
               mat-stroked-button
-              (click)="redirectToAllPatientsTab()"
+              (click)="clearBills($event)"
               [routerLink]="'/clinic/patient-list'"
               matTooltip="Back to List"
             >
