typing error on (click) in a button "back to client list" cleared.

--- a/ui/src/app/shared/components/shared-patient-consultation/shared-patient-consultation.component.html
+++ b/ui/src/app/shared/components/shared-patient-consultation/shared-patient-consultation.component.html
@@ -47,7 +47,7 @@
             <button
               class="float-left ml-2"
               mat-stroked-button
-              (click)="clearBillls()navigateToList()"
+              (click)="clearBillls();navigateToList()"
               matTooltip="Back to List"
             >
               <mat-icon>arrow_back</mat-icon>
