--- a/ui/src/app/modules/clinic/pages/clinic-patient-list/clinic-patient-list.component.html
+++ b/ui/src/app/modules/clinic/pages/clinic-patient-list/clinic-patient-list.component.html
@@ -59,7 +59,7 @@
               [isTabularList]="true"
               [itemsPerPage]="10"
               [currentLocation]="(currentLocation$ | async)?.id"
-              [orderType]="params?.consultationOrderType"
+              [orderType]="params?.consultationOrderType.uuid"
               [orderStatus]="'RECEIVED'"
               [currentLocation]="(currentLocation$ | async)?.id"
               (selectPatient)="onSelectPatient($event)"
