Add admission and discharge status to the history. #497 (Software engineering assignment) Group 3
(bug)The problem is the absence of admission and discharge status in the history, which hinders tracking a patient's care timeline and continuity.
(Solution) We added on  ngOnInit() function a parameter <this,params> which takes data from this.visits$<this.params = {
      visits: [
        { visit: this.visits$ },
      ],
    };>
We then added function patientStatus() which uses this,params to access the visit.visit.stopDatetime and visit.visit.startDatetime, So when visit.visit.stopDatetime isnt available it displays STATUS of admitted when both visit.visit.stopDatetime && visit.visit.startDatetime it displays status of Discharged. then added div that displays result
2.then added in <patient-history.component.html> a span in which changes admitted and discharge

GROUP MEMBERS
1 James c Sawe 2022-04-12029
2-HAPPINESS NUIS KASAMBALA 2022-04-03745
3-Sonia Moses limbu 2022-04-05039
4-2022-04-01303 Caren A Christopher
5-2022-04-06412 Karenbhoke C Maseke

Co-Authored-By: HAPPYNUIS <167102138+happynuis@users.noreply.github.com>
Co-Authored-By: Karenbhoke <167118734+karenbhoke@users.noreply.github.com>
Co-Authored-By: carenchris <139714150+carenchris@users.noreply.github.com>
Co-Authored-By: James Cuthbert Sawe <jamescuthbert907@gmail.com>

--- a/ui/src/app/shared/components/patient-history/patient-history.component.html
+++ b/ui/src/app/shared/components/patient-history/patient-history.component.html
@@ -17,6 +17,13 @@
     <mat-progress-bar mode="indeterminate"></mat-progress-bar>
   </div>
   <div *ngIf="params?.visits?.length && !loadingData && params?.provider">
+    
+    <div class="notification">
+      <h4>
+        Patient Status: {{ patientStatus }}
+      </h4>
+    </div>
+    
     <mat-vertical-stepper [linear]="false" #stepper>
       <mat-step *ngFor="let visit of params?.visits">
         <ng-template matStepLabel>
@@ -26,9 +33,18 @@
             to {{ visit?.visit?.stopDatetime | date: "dd-MM-yyyy HH:mm:ss" }}
           </span>
           <span *ngIf="!visit?.visit?.stopDatetime">
-            <i>(On going visit)</i>
+            <i>(Admitted)</i>
           </span>
+
+          <span *ngIf="visit?.visit?.stopDatetime && visit?.visit?.startDatetime">
+            <i>(Discharged)</i>
+          </span>
+
         </ng-template>
+
+        
+
+
 
         <!-- <div *ngFor="let form of params?.customForms">
 
