issue  #68 resolving the page from reloading everytime the user enters data

--- a/ui/src/app/modules/laboratory/modules/settings/components/shared-price-list/shared-price-list.component.html
+++ b/ui/src/app/modules/laboratory/modules/settings/components/shared-price-list/shared-price-list.component.html
@@ -134,15 +134,14 @@
               class="item-price"
               *ngFor="let paymentScheme of paymentTypesAndSchemes"
             >
-              <!-- {{ paymentScheme?.paymentType | json }} -->
-              <!-- {{ pricingItem | json }} -->
-              <!-- <app-pricing-item
-                [pricingItem]="pricingItem"
-                [paymentScheme]="paymentScheme"
-                [paymentType]="paymentScheme?.paymentType"
-                (saveItemPrice)="onSaveItem($event)"
-              >
-              </app-pricing-item> -->
+            <app-pricing-item
+            [pricingItem]="pricingItem"
+            [paymentScheme]="paymentScheme"
+            [paymentType]="paymentScheme?.paymentType"
+            (saveItemPrice)="onSaveItem($event)"
+          >
+          </app-pricing-item>
+          
             </td>
           </tr>
 
