--- a/ui/src/app/shared/components/patient-medication-summary/patient-medication-summary.component.html
+++ b/ui/src/app/shared/components/patient-medication-summary/patient-medication-summary.component.html
@@ -66,7 +66,12 @@
             </div>
           </ng-template>
         </div>
-      </mat-tab>
+     </mat-tab>
+     <app-patient-list
+      [patients]="patients"
+      [tittle]="'Patient List'"
+      [showDetails]="true">
+      </app-patient-list>
       <mat-tab
         *ngIf="!previous"
         label="{{
