--- a/ui/src/app/shared/components/patient-medication-summary/patient-medication-summary.component.html
+++ b/ui/src/app/shared/components/patient-medication-summary/patient-medication-summary.component.html
@@ -65,13 +65,15 @@
               </table>
             </div>
           </ng-template>
+
+         <app-patient-list
+          [patients]="patients"
+          [title]="'Patient List'"
+          [showDetails]="true">
+          </app-patient-list>
+         
         </div>
-     </mat-tab>
-     <app-patient-list
-      [patients]="patients"
-      [tittle]="'Patient List'"
-      [showDetails]="true">
-      </app-patient-list>
+      </mat-tab>
       <mat-tab
         *ngIf="!previous"
         label="{{
@@ -319,12 +321,5 @@
         </div>
       </mat-tab>
     </mat-tab-group>
-    <div
-      *ngIf="!drugParams?.currentVisit?.hasConfirmedDiagnosis"
-      class="alert alert-warning"
-      role="alert"
-    >
-      NO Confirmed/Final Diagnosis provided. Please provide before Medication
-    </div>
   </div>
-</div>
+</div> 
