Added Stopped Medication Tab

--- a/ui/src/app/shared/components/patient-medication-summary/patient-medication-summary.component.html
+++ b/ui/src/app/shared/components/patient-medication-summary/patient-medication-summary.component.html
@@ -237,6 +237,18 @@
           </ng-template>
         </div>
       </mat-tab>
+      <mat-tab
+        label="Stopped Medication"
+        *ngIf="!previous"
+      >
+        <div class="mat-tab-container">
+          <ng-template matTabContent>
+            <div>
+              Hello World!!!
+            </div>
+          </ng-template>
+        </div>
+      </mat-tab>
       <mat-tab label="Drugs" *ngIf="previous">
         <div class="mat-tab-container">
           <ng-template matTabContent>
