Correct logical operator in all patients tab, SABRA HAROUB SEIF, 2022-04-12051

--- a/ui/src/app/modules/clinic/pages/clinic-patient-list/clinic-patient-list.component.html
+++ b/ui/src/app/modules/clinic/pages/clinic-patient-list/clinic-patient-list.component.html
@@ -141,7 +141,7 @@
           <mat-tab
             label="All Patients"
             *ngIf="
-              params?.showAllPatientsTab?.value === 'true' &&
+              params?.showAllPatientsTab?.value === 'true' ||
               (params?.userPrivileges['CLINIC_VIEW_ALL_CLIENTS'] ||
                 params?.userPrivileges['ALL'])
             "
