the changes where made

--- a/ui/src/app/modules/billing/components/exemption-item/exemption-item.component.html
+++ b/ui/src/app/modules/billing/components/exemption-item/exemption-item.component.html
@@ -18,11 +18,14 @@
     </div>
     <div class="mt-3">
       <app-form
+
+
         id="select-exemption-type"
         [fields]="[exemptionForm.exemptionType]"
         (formUpdate)="onFormUpdate($event)"
       >
       </app-form>
+      // The following code snippet is from ui/src/app/modules/billing/components/exemption-item/exemption-item.component.html
     </div>
     <div class="mt-3">
       <app-form
