--- a/ui/src/app/modules/registration/components/start-visit-model/start-visit-model.component.html
+++ b/ui/src/app/modules/registration/components/start-visit-model/start-visit-model.component.html
@@ -152,6 +152,14 @@
           ></app-update-doctors-room>
         </div>
       </mat-tab>
+
+
+      <mat-tab>
+        <ng-template mat-tab-label>
+          <span>Update Payment Category</span>
+        </ng-template>
+      </mat-tab>
+
     </mat-tab-group>
   </div>
   <div *ngIf="errors?.length > 0">
