Justo Misso 2022-04-07560 called the onDischargePatient() function

--- a/ui/src/app/shared/components/shared-patient-dashboard/shared-patient-dashboard.component.html
+++ b/ui/src/app/shared/components/shared-patient-dashboard/shared-patient-dashboard.component.html
@@ -99,7 +99,7 @@
             <div class="mr-2">
               <app-shared-bmi></app-shared-bmi>
             </div>
-            //created a button for discharging a patient
+            //called the onDischargePatient() function
             <button
             *ngIf="!isInpatient"
             class="mr-2"
