changes were made on the payment system

--- a/ui/src/app/modules/billing/pages/billing-list/billing-list.component.html
+++ b/ui/src/app/modules/billing/pages/billing-list/billing-list.component.html
@@ -3,6 +3,7 @@
     settingCurrentLocationStatus: settingCurrentLocationStatus$ | async
   } as params"
 >
+
   <div class="pt-4" *ngIf="!params?.settingCurrentLocationStatus">
     <mat-toolbar>
       <!-- <button mat-icon-button [routerLink]="''" matTooltip="Go to Home page">
@@ -14,7 +15,10 @@
 
     <!-- To include deceased patient in billing, set includeDeadPatients= "true" -->
     <div class="ml-2 mr-2">
-      <app-patient-list
+      <app-patient-list#
+
+
+
         [itemsPerPage]="10"
         [includeDeadPatients]="false"
         [isTabularList]="true"
