--- a/ui/src/app/modules/laboratory/modules/sample-collection/pages/laboratory-sample-collection/laboratory-sample-collection.component.html
+++ b/ui/src/app/modules/laboratory/modules/sample-collection/pages/laboratory-sample-collection/laboratory-sample-collection.component.html
@@ -36,7 +36,7 @@
           <button
             class="float-left"
             mat-stroked-button
-            [routerLink]="'/laboratory/sample-collection'"
+            (click)="goBack()"
             matTooltip="Back to List"
           >
             <mat-icon>arrow_back</mat-icon>
