--- a/ui/src/app/shared/components/price-list/price-list.component.html
+++ b/ui/src/app/shared/components/price-list/price-list.component.html
@@ -4,7 +4,6 @@
 </div>
 <!-- End Alerts -->
 <mat-card
-  appearance="outlined"
   class="price-list-container"
   *ngIf="{
     loadingPricingItems: loadingPricingItems$ | async,
@@ -16,43 +15,80 @@
     priceListDepartments: priceListDepartments$ | async
   } as params"
 >
-  <div class="d-flex justify-content-between mb-2">
+  <div class="d-flex justify-content-between mb-2 align-items-center">
     <div class="h4 font-weight-normal">Price List</div>
-    <button
+    <div class="d-flex align-items-center justify-content-lg-start" style="background-color: #2196F3; border-radius: 4px; padding: 5px; height: 40px; width: 21.05%;">
+      <button
+      mat-stroked-button
+      color="primary"
+      (click)="fileInput.click()"
+      style="margin-right: 10px; height: 25px; font-size: 0.75rem; padding: 0 10px; display: flex; align-items: center; background-color: white; border-radius: 4px;"
+      >
+      Choose File
+      <input
+      type="file"
+      #fileInput
+      accept=".xlsx,.xls,.csv"
+      (change)="uploadExcel($event)"
+      style="display: none"
+      />
+      </button>
+      <span *ngIf="selectedFileName; else noFileChosen" style="color: white;">{{ selectedFileName }}</span>
+      <ng-template #noFileChosen><span style="color: white;">No file chosen</span></ng-template>
+    </div>
+    <div class="d-flex align-items-center">
+      <button
       mat-flat-button
       color="primary"
-      [disabled]="addingPricingItem"
-      style="height: 40px"
-      (click)="onCreate($event, params?.pricingItems)"
-    >
-      <mat-icon *ngIf="!addingPricingItem">add</mat-icon>
+      style="height: 40px; margin-right: 10px; display: flex; align-items: center; justify-content: center;"
+      [disabled]="isDownloading"
+      (click)="downloadExcel()"
+      >
+      <mat-icon *ngIf="!isDownloading" style="margin-right: 4px;">download</mat-icon>
       <mat-spinner
         color="primary"
-        *ngIf="addingPricingItem"
+        *ngIf="isDownloading"
         [diameter]="20"
         style="display: inline-block !important; margin-right: 4px"
       ></mat-spinner>
-      <span>Add Item</span>
-    </button>
+      <span>Download</span>
+      </button>
+    </div>
+        <div class="d-flex align-items-center">
+      <button
+        mat-flat-button
+        color="primary"
+        [disabled]="addingPricingItem"
+        style="height: 40px"
+        (click)="onCreate($event, params?.pricingItems)"
+      >
+        <mat-icon *ngIf="!addingPricingItem">add</mat-icon>
+        <mat-spinner
+          color="primary"
+          *ngIf="addingPricingItem"
+          [diameter]="20"
+          style="display: inline-block !important; margin-right: 4px"
+        ></mat-spinner>
+        <span>Add Item</span>
+      </button>
+    </div>
   </div>
 
   <div
     *ngIf="params?.priceListDepartments"
     class="w-100 d-flex justify-content-between mt-3"
   >
-    <div class="w-25">
-      <mat-form-field *ngIf="!hideDepartmentsSelection">
-        <mat-label>Depatments</mat-label>
-        <mat-select (selectionChange)="getSelectedDepartment($event)">
-          <mat-option [value]="'Drug'">Drugs</mat-option>
-          <mat-option
-            *ngFor="let department of params?.priceListDepartments"
-            [value]="department"
-            >{{ department?.display }}</mat-option
-          >
-        </mat-select>
-      </mat-form-field>
-    </div>
+    <mat-form-field class="w-25">
+      <mat-label>Depatments</mat-label>
+      <mat-select (selectionChange)="getSelectedDepartment($event)">
+        <mat-option [value]="'Drug'">Drugs</mat-option>
+        <mat-option
+          *ngFor="let department of params?.priceListDepartments"
+          [value]="department"
+          >{{ department?.display }}</mat-option
+        >
+      </mat-select>
+    </mat-form-field>
     <div class="w-75">
       <div class="d-flex justify-content-end mb-2">
         <button
@@ -82,7 +118,7 @@
     <table class="table table-bordered">
       <thead>
         <tr>
-          <th rowspan="2" style="width: 30px">#</th>
+          <th rowspan="2">#</th>
           <th rowspan="2" class="pb-0">
             <mat-form-field class="w-100" appearance="fill">
               <mat-label>{{
@@ -126,13 +162,14 @@
             class="pricing-item-tr"
             id="{{ pricingItem?.htmlDisplay }}"
           >
-            <td>
+            <td width="2%">
               {{ currentPage * 25 + priceItemIndex + 1 }}
             </td>
-            <td>
+            <td width="10%">
               {{ pricingItem?.display }}
             </td>
             <td
+              width="10%"
               class="item-price"
               *ngFor="let paymentScheme of paymentTypesAndSchemes"
             >
@@ -142,7 +179,6 @@
                 [pricingItem]="pricingItem"
                 [paymentScheme]="paymentScheme"
                 [paymentType]="paymentScheme?.paymentType"
-                [paymentTypes]="paymentTypes"
                 (saveItemPrice)="onSaveItem($event)"
               >
               </app-pricing-item>
