Fix(patient-search): update pagination and allow displaying 100 patients

--- a/ui/src/app/shared/modules/form/components/field/field.component.html
+++ b/ui/src/app/shared/modules/form/components/field/field.component.html
@@ -63,13 +63,7 @@
       [disabled]="shouldDisable || field?.disabled"
       [placeholder]="field?.placeholder"
       class="{{ fieldClass || 'field-input' }}"
-      [type]="
-    (field?.label === 'Dose' || field?.label === 'Duration') 
-      ? 'number' 
-      : field?.type === 'number' 
-      ? 'text' 
-      : field?.type
-  "
+      [type]="field?.type === 'number' ? 'text' : field?.type"
       [required]="field?.required"
       matInput
       step="any"
