--- a/ui/src/app/shared/store-modals/stock-invoice-form-dialog/stock-invoice-form-dialog.component.html
+++ b/ui/src/app/shared/store-modals/stock-invoice-form-dialog/stock-invoice-form-dialog.component.html
@@ -26,7 +26,7 @@
     [existingStockInvoice]="data?.stockInvoice"
     [stockInvoiceItem]="data?.stockInvoiceItem"
     [currentLocation]="data?.currentLocation"
-    [hideAddedItems]="true"
+    [hideAddedItems]="false"
     (closeDialog)="onClosePopup()"
   ></app-stock-receiving-form>
   <div class="mt-2 mb-2" *ngIf="!data?.stockInvoice">
