--- a/ui/src/app/shared/components/table/table.component.html
+++ b/ui/src/app/shared/components/table/table.component.html
@@ -160,7 +160,117 @@
       [dataSource]="dataSource"
       matSort
     >
-      <!-- Existing mat-table code remains unchanged -->
+    <ng-container *ngFor="let column of columns" [matColumnDef]="column?.id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ column?.label }}
+      </th>
+
+      <td mat-cell *matCellDef="let row; let i = index">
+        <ng-container *ngIf="!column.isActionColumn">
+          {{ column.id === "index" ? i + 1 : row[column?.id] }}
+        </ng-container>
+
+        <div
+          *ngIf="column.isActionColumn && actionOptions.length > 0"
+          class="table__action-options"
+        >
+          <ng-container
+            *ngFor="
+              let actionOption of actionOptions
+                | hideActionOption: row.actionOptionsToHide
+            "
+          >
+            <button
+              [disabled]="
+                params?.patientDrugOrdersStatuses &&
+                params?.patientDrugOrdersStatuses[row?.drugOrder?.uuid] &&
+                params?.patientDrugOrdersStatuses[row?.drugOrder?.uuid][
+                  'status'
+                ] === 'DISPENSED'
+              "
+              mat-button
+              [color]="actionOption?.buttonStyle?.color"
+              *ngIf="actionOption?.buttonStyle?.isDefault"
+              class="mt-1 mb-1 mr-1"
+              (click)="onSelectAction($event, actionOption, row)"
+            >
+              {{ actionOption.name }}
+            </button>
+            <button
+              [disabled]="
+                params?.patientDrugOrdersStatuses &&
+                params?.patientDrugOrdersStatuses[row?.drugOrder?.uuid] &&
+                params?.patientDrugOrdersStatuses[row?.drugOrder?.uuid][
+                  'status'
+                ] === 'DISPENSED'
+              "
+              mat-stroked-button
+              [color]="actionOption?.buttonStyle?.color"
+              *ngIf="actionOption?.buttonStyle?.isOutlined"
+              class="mt-1 mb-1 mr-1"
+              (click)="onSelectAction($event, actionOption, row)"
+            >
+              {{ actionOption.name }}
+            </button>
+            <button
+              [disabled]="
+                params?.patientDrugOrdersStatuses &&
+                params?.patientDrugOrdersStatuses[row?.drugOrder?.uuid] &&
+                params?.patientDrugOrdersStatuses[row?.drugOrder?.uuid][
+                  'status'
+                ] === 'DISPENSED'
+              "
+              mat-flat-button
+              [color]="actionOption?.buttonStyle?.color"
+              *ngIf="actionOption?.buttonStyle?.isFlat"
+              class="mt-1 mb-1 mr-1"
+              (click)="onSelectAction($event, actionOption, row)"
+            >
+              {{
+                params?.patientDrugOrdersStatuses &&
+                params?.patientDrugOrdersStatuses[row?.drugOrder?.uuid] &&
+                params?.patientDrugOrdersStatuses[row?.drugOrder?.uuid][
+                  "status"
+                ] === "DISPENSED"
+                  ? "Dispensed"
+                  : actionOption.name
+              }}
+            </button>
+          </ng-container>
+        </div>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr
+      (click)="onSelectRow($event, row)"
+      class="table__row"
+      mat-row
+      *matRowDef="let row; columns: displayedColumns"
+    ></tr>
+
+    <!-- Row shown when there is no matching data. -->
+    <ng-container *ngIf="!loading">
+      <tr class="mat-row" *matNoDataRow>
+        <td
+          class="mat-cell text-center text-muted"
+          [attr.colspan]="displayedColumns?.length"
+        >
+          {{ tableConfig?.noDataLabel }}
+        </td>
+      </tr>
+    </ng-container>
+
+    <!-- Table loading error -->
+    <tr>
+      <td
+        class="mat-cell text-center text-danger"
+        [attr.colspan]="displayedColumns?.length"
+      >
+        {{ loadingDataError }}
+      </td>
+    </tr>
+
     </table>
 
     <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
